# schrodinger-equation-solver

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: hamiltonian.h  io.h  potentials.h  tridiagonal.h  vector.h
src/: CMakeLists.txt  hamiltonian.c  main.c  potentials.c  shooting.c  tridiagonal.c  vector.c
